<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FE9A43"
    tools:context=".MainActivity"
    tools:ignore="UnknownId">



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccione_el_metodo_de_pago1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"/>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="367dp"
        android:layout_height="504dp"
        android:layout_margin="16dp"
        android:background="#FFFFFF"
        app:circularflow_radiusInDP="40dp"
        app:layout_constraintCircleRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="467dp">

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFC107"
                android:backgroundTintMode="add"
                android:text="@string/tarjetas_de_credito1" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/cards" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="#FFC107"
                android:text="@string/mercado_pago1" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                app:srcCompat="@drawable/mp" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="#FFC107"
                android:text="@string/paypal1" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                app:srcCompat="@drawable/pp" />

        </RadioGroup>

    </FrameLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFC107"
        android:text="@string/siguiente1"
        android:textColor="#0F0E0E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />

</androidx.constraintlayout.widget.ConstraintLayout>